--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,6 @@ before_install:
 
 script:
   - npm run test
+  - node node_modules/.bin/jest --coverage
+    # npm run test.coverage
+    # npm run test.mutation
