--- a/package.json
+++ b/package.json
@@ -13,6 +13,17 @@
     "type": "git",
     "url": "git+https://github.com/Kirouane/test-tp.git"
   },
+  "jest":{
+	  "verbose":true,
+	  "coverageThreshold":{
+		  "global":{
+			  "branches":100,
+			  "functions":100,
+			  "lines":100,
+			  "statements":100
+		  }
+	  }
+  },
   "author": "",
   "license": "ISC",
   "bugs": {
